Main no longer overflow sidebar (now big gap)

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root{
     --text-primary:#000;
-    --bgPrimary:#fff;
+    --bgPrimary:#F9F9F9;
    --bgSecondary: #F9F9F9;
    --pink: #0071bd;
    --light-blue: #e6f7ff;
@@ -14,6 +14,7 @@
     font-family: 'Assistant', sans-serif;
 }
 
+
 a:hover{
     color: var(--pink) !important;
 }
@@ -24,13 +25,14 @@ a:hover{
 }
 
 .navbar{
+    display: "flex";
     flex: 0.2;
     background-color: rgb(0, 21, 41);
 }
 
 .main{
     flex: 0.8;
-    width: 100%;   
+    width: 100%;
 }
 .routes{
     padding: 20px;
@@ -39,7 +41,6 @@ a:hover{
 .nav-container{
     position: fixed;
     left: 0;
-    margin: 10px;
     height: 100vh;
     margin: 0px;
     background-color: rgb(0, 21, 41);
@@ -75,11 +76,6 @@ a:hover{
     align-items: center;
 }
 
-@media screen and (max-width:1300px){
-    .main{
-        margin-left: 50px;
-    }
-}
 
 @media screen and (max-width:1170px){
     .main{
@@ -90,6 +86,18 @@ a:hover{
 @media screen and (max-width:1000px){
     .main{
         margin-left: 100px;
+    }
+}
+
+@media screen and (min-width:800px) and (max-width: 1000px){
+    .main {
+        padding-left: 200px
+    }
+}
+
+@media screen and (min-width:1000px){
+    .main {
+        padding-left: 200px
     }
 }
 
@@ -328,6 +336,10 @@ width: 70%;
 }
 .provider-name{
     margin-left: 10px;
+}
+
+.chart {
+    background-color: #000;
 }
 
 .chart-header{
